plugins {
    id "com.android.library"
    id "kotlin-android"
}

group 'dev.asdevs.signalr_flutter'
version '1.0-SNAPSHOT'

rootProject.allprojects {
    repositories {
        google()
        mavenCentral()
    }
}

android {
    namespace 'dev.asdevs.signalr_flutter'
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    kotlinOptions {
        jvmTarget = '17'
    }

    sourceSets {
        main.java.srcDirs += 'src/main/kotlin'
    }

    defaultConfig {
        compileSdk 34
        minSdkVersion 21
    }
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation files('libraries/signalr-client-sdk.jar')
    implementation files('libraries/signalr-client-sdk-android.jar')
}
